# UnsupervisedTaskLearning

./: .gitignore  CMakeLists.txt  README.md
01-hapticData1Robot/: CMakeLists.txt  controller.cpp  simviz.cpp  world.urdf
02-haptic_painting/: CMakeLists.txt  controller.cpp  simviz.cpp
03-haptic_cleaning/: simviz.cpp
analysis/: analyse.py  classifier.py  debuggingNotebook.ipynb  finalProcessing_results.py  gmm.py  gmm_cap_Tmat.py  gmm_objects.py  gmm_pipe.py  initialProcessing_rawdata.py  plotTmatrixdata.py  plot_data.py  plotbar.py  plotbox.py  plotconfusion.py  plotresults.py  process_success.py  read_data.py  test.py  testmultiple.sh  transitionMatrixDebugging.ipynb
analysis/.ipynb_checkpoints/: debuggingNotebook-checkpoint.ipynb
analysis/references/: covartest.npy  mean.npy  meantest.npy  pitest.npy
analysis/results/: run10_prmlabels_T0  run12_likelihoods_T0  run12_prmlabels_T0  run13_likelihoods_T0  run13_prmlabels_T0  run14_likelihoods_T0  run15_likelihoods_T0  run17_tlabels_T0  run18_prmlabels_T0  run19_prmlabels_T0  run1_likelihoods_T0  run2_likelihoods_T0  run2_tlabels_T0  run3_prmlabels_T0  run4_tlabels_T0  run5_prmlabels_T0  run6_likelihoods_T0  run6_prmlabels_T0  run7_prmlabels_T0
analysis/transitions/: T_1
data/: bias.force  howToSaveData.txt  rmsemicolons.sh
data/big_cap/: bigrun1  bigrun2  bigrun4
data2/: bigrun3  run12_tlabels  run13_labelled  run13_prmlabels  run14_labelled  run16_prmlabels  run17  run17_tlabels  run18_tlabels  run19_labelled  run19_tlabels  run2_labelled  run2_tlabels  run3_labelled  run3_tlabels  run4_labelled  run4_tlabels  run5_labelled  run6_tlabels  run8  run8_labelled  run8_tlabels  run9_labelled  smallrun1  smallrun2
data_plots/: plot_data.py
haptics/01-hapticData1Robot/: CMakeLists.txt  controller.cpp  panda_arm.urdf
haptics/03-haptic_cleaning/: CMakeLists.txt  Makefile  cmake_install.cmake  controller.cpp  panda_arm.urdf  (+1 more)
task_bottle_cap/: CMakeLists.txt  controller.cpp  panda_arm_hand.urdf  simviz.cpp  world.urdf
training/: Q4.py  Q4_helper.py  dataset_pytorch.py  fromjonnie.py  network.py  network_plotter.py  sampleTrain.txt
(+881 files in other folders)
