# create an executable
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${RUBBERDUCKY_APPLICATIONS_BINARY_DIR}/02-haptic_painting)
ADD_EXECUTABLE (controller02 controller.cpp  ${RUBBERDUCKY_APPLICATIONS_COMMON_SOURCE})
ADD_EXECUTABLE (simviz02 simviz.cpp ${RUBBERDUCKY_APPLICATIONS_COMMON_SOURCE})

# and link the library against the executable
TARGET_LINK_LIBRARIES (controller02 ${RUBBERDUCKY_APPLICATIONS_COMMON_LIBRARIES})
TARGET_LINK_LIBRARIES (simviz02 ${RUBBERDUCKY_APPLICATIONS_COMMON_LIBRARIES})

# export resources such as model files.
# NOTE: this requires an install build
SET(RESOURCE_DIR ${RUBBERDUCKY_APPLICATIONS_BINARY_DIR}/resources)
FILE(MAKE_DIRECTORY ${RESOURCE_DIR})
SET(APP_RESOURCE_DIR ${RESOURCE_DIR}/02-haptic_painting)
FILE(MAKE_DIRECTORY ${APP_RESOURCE_DIR})
FILE(COPY world.urdf DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY panda_arm.urdf DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY panda_arm_brush.urdf DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY panda_arm_palette.urdf DESTINATION ${APP_RESOURCE_DIR})
