# create an executable
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${RUBBERDUCKY_APPLICATIONS_BINARY_DIR}/01-hapticData1Robot)
ADD_EXECUTABLE (controller01 controller.cpp  ${RUBBERDUCKY_APPLICATIONS_COMMON_SOURCE})
ADD_EXECUTABLE (simviz01 simviz.cpp ${RUBBERDUCKY_APPLICATIONS_COMMON_SOURCE})
include_directories(/usr/local/include/)

# and link the library against the executable
TARGET_LINK_LIBRARIES (controller01 ${RUBBERDUCKY_APPLICATIONS_COMMON_LIBRARIES})
TARGET_LINK_LIBRARIES (simviz01 ${RUBBERDUCKY_APPLICATIONS_COMMON_LIBRARIES})

# export resources such as model files.
# NOTE: this requires an install build
SET(RESOURCE_DIR ${RUBBERDUCKY_APPLICATIONS_BINARY_DIR}/resources)
FILE(MAKE_DIRECTORY ${RESOURCE_DIR})
SET(APP_RESOURCE_DIR ${RESOURCE_DIR}/01-hapticData1Robot)
FILE(MAKE_DIRECTORY ${APP_RESOURCE_DIR})
FILE(COPY world.urdf DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY panda_arm.urdf DESTINATION ${APP_RESOURCE_DIR})

